--- a/bluebottle/organizations/locale/en/LC_MESSAGES/django.po
+++ b/bluebottle/organizations/locale/en/LC_MESSAGES/django.po
@@ -155,6 +155,10 @@ msgstr "partner organisations"
 msgid "phone number"
 msgstr "phone number"
 
+#: /Users/aethem/Documents/SWTR/onepercent/onepercentclub-site/env-2.7/src/bluebottle/bluebottle/bb_organizations/models.py:90
+msgid "website"
+msgstr "website"
+
 #: /Users/aethem/Documents/SWTR/onepercent/onepercentclub-site/env-2.7/src/bluebottle/bluebottle/bb_organizations/models.py:97
 msgid "tags"
 msgstr "keywords"
